; ModuleID = '/home/carl/AnghaBench/reactos/drivers/filesystems/btrfs/zstd/extr_zstd_compress.c_ZSTD_estimateCDictSize_advanced.c'
source_filename = "/home/carl/AnghaBench/reactos/drivers/filesystems/btrfs/zstd/extr_zstd_compress.c_ZSTD_estimateCDictSize_advanced.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [24 x i8] c"sizeof(ZSTD_CDict) : %u\00", align 1
@HUF_WORKSPACE_SIZE = common dso_local global i64 0, align 8
@ZSTD_dlm_byRef = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @ZSTD_estimateCDictSize_advanced(i64 %0, i32 %1, i64 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  store i64 %0, i64* %4, align 8
  store i32 %1, i32* %5, align 4
  store i64 %2, i64* %6, align 8
  %7 = call i32 @DEBUGLOG(i32 5, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0), i32 4)
  %8 = load i64, i64* @HUF_WORKSPACE_SIZE, align 8
  %9 = add i64 4, %8
  %10 = call i64 @ZSTD_sizeof_matchState(i32* %5, i32 0)
  %11 = add i64 %9, %10
  %12 = load i64, i64* %6, align 8
  %13 = load i64, i64* @ZSTD_dlm_byRef, align 8
  %14 = icmp eq i64 %12, %13
  br i1 %14, label %15, label %16

15:                                               ; preds = %3
  br label %18

16:                                               ; preds = %3
  %17 = load i64, i64* %4, align 8
  br label %18

18:                                               ; preds = %16, %15
  %19 = phi i64 [ 0, %15 ], [ %17, %16 ]
  %20 = add i64 %11, %19
  ret i64 %20
}

declare dso_local i32 @DEBUGLOG(i32, i8*, i32) #1

declare dso_local i64 @ZSTD_sizeof_matchState(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
